Bug 315786 - Contact plasmoid crashes when opening settings
Summary: Contact plasmoid crashes when opening settings
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contact-applet (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 0.6-beta
Assignee: Telepathy Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-02-26 01:18 UTC by Aleix Pol
Modified: 2013-02-26 01:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2013-02-26 01:18:46 UTC
Application: plasmoidviewer (1.0)
KDE Platform Version: 4.10.60 (Compiled from sources)
Qt Version: 4.8.4
Operating System: Linux 3.7.6-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:
I was using the plasmoidviewer, but the same happens with plasma-desktop. I don't think it's very hard to reproduce.

Open -> settings -> boom

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma Widget Viewer (plasmoidviewer), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f7199c1f780 (LWP 25021))]

Thread 2 (Thread 0x7f717ddbe700 (LWP 25023)):
#0  0x00007f719673f954 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f7190d937a7 in ?? () from /usr/lib/libQtScript.so.4
#2  0x00007f7190d937d9 in ?? () from /usr/lib/libQtScript.so.4
#3  0x00007f719673be0f in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f7195c59efd in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f7199c1f780 (LWP 25021)):
[KCrash Handler]
#6  0x00007f717f465761 in Tp::Contact::manager() const () from /usr/lib/libtelepathy-qt4.so.2
#7  0x00007f717ee0a5ba in KTp::ContactsListModel::onContactsChanged (this=0x1d73c00, added=..., removed=...) at /home/kde-devel/src/ktp-common-internals/KTp/Models/contacts-list-model.cpp:170
#8  0x00007f717edf620e in KTp::ContactsListModel::qt_static_metacall (_o=0x1d73c00, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff04c11da0) at KTp/Models/moc_contacts-list-model.cpp:53
#9  0x00007f7196addb8f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#10 0x00007f717f044a69 in KTp::GlobalContactManager::allKnownContactsChanged (this=0x1d75a60, _t1=..., _t2=...) at KTp/moc_global-contact-manager.cpp:117
#11 0x00007f717f053c2b in KTp::GlobalContactManager::onContactManagerStateChanged (this=0x1d75a60, contactManager=..., state=Tp::ContactListStateSuccess) at /home/kde-devel/src/ktp-common-internals/KTp/global-contact-manager.cpp:112
#12 0x00007f717f053a4c in KTp::GlobalContactManager::onConnectionChanged (this=0x1d75a60, connection=...) at /home/kde-devel/src/ktp-common-internals/KTp/global-contact-manager.cpp:93
#13 0x00007f717f053948 in KTp::GlobalContactManager::onNewAccount (this=0x1d75a60, account=...) at /home/kde-devel/src/ktp-common-internals/KTp/global-contact-manager.cpp:83
#14 0x00007f717f0537cf in KTp::GlobalContactManager::onAccountManagerReady (this=0x1d75a60, op=0x1d760c0) at /home/kde-devel/src/ktp-common-internals/KTp/global-contact-manager.cpp:75
#15 0x00007f717f04489a in KTp::GlobalContactManager::qt_static_metacall (_o=0x1d75a60, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff04c120f0) at KTp/moc_global-contact-manager.cpp:65
#16 0x00007f7196addb8f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#17 0x00007f717f53d01f in Tp::PendingOperation::finished(Tp::PendingOperation*) () from /usr/lib/libtelepathy-qt4.so.2
#18 0x00007f717f53d101 in ?? () from /usr/lib/libtelepathy-qt4.so.2
#19 0x00007f7196add06e in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#20 0x00007f71974c218c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#21 0x00007f71974c660a in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#22 0x00007f719952fcae in KApplication::notify (this=0x7fff04c12bd0, receiver=0x1d760c0, event=0x1c2db70) at /home/kde-devel/src/kdelibs/kdeui/kernel/kapplication.cpp:311
#23 0x00007f7196ac86ae in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#24 0x00007f7196acc011 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#25 0x00007f7196af69d3 in ?? () from /usr/lib/libQtCore.so.4
#26 0x00007f718c828845 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#27 0x00007f718c828b78 in ?? () from /usr/lib/libglib-2.0.so.0
#28 0x00007f718c828c34 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#29 0x00007f7196af6b66 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#30 0x00007f719756269e in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007f7196ac73ff in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007f7196ac7688 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0x00007f7196acc328 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#34 0x000000000040e94d in main (argc=2, argv=0x7fff04c13a08) at /home/kde-devel/src/plasmate/plasmoidviewer/main.cpp:331

Reported using DrKonqi
Comment 1 David Edmundson 2013-02-26 01:45:48 UTC
Git commit b4006f84be8ea7ce1d4be5410e1304a1f3fa90bd by David Edmundson.
Committed on 26/02/2013 at 02:44.
Pushed by davidedmundson into branch 'master'.

Fix crash in contact applet
FIXED-IN: 0.6.0

Reviewed-by: Aleix Pol

M  +2    -1    contact/src/telepathy-contact.cpp

http://commits.kde.org/telepathy-contact-applet/b4006f84be8ea7ce1d4be5410e1304a1f3fa90bd