Fix crash in contact applet

BUG: 315786
FIXED-IN: 0.6.0

Reviewed-by: Aleix Pol